@@ -756,6 +756,7 @@ void GELine(double x1, double y1, double x2, double y2,
 	    const pGEcontext gc, pGEDevDesc dd)
 {
     Rboolean clip_ok;
+    if (!R_FINITE(gc->lwd) || gc->lwd <= 0) return;
     if (gc->lty == LTY_BLANK) return;
     if (dd->dev->canClip) {
 	clip_ok = clipLine(&x1, &y1, &x2, &y2, 1, dd);
@@ -859,6 +860,7 @@ static void clipPolyline(int n, double *x, double *y,
 void GEPolyline(int n, double *x, double *y, const pGEcontext gc, pGEDevDesc dd)
 {
     if (gc->lty == LTY_BLANK) return;
+    if (!R_FINITE(gc->lwd) || gc->lwd <= 0) return;
     if (dd->dev->canClip) {
 	clipPolyline(n, x, y, gc, 1, dd);  /* clips to device extent
 						  then draws */
@@ -1089,6 +1091,7 @@ void GEPolygon(int n, double *x, double *y, const pGEcontext gc, pGEDevDesc dd)
      * after any R_alloc's done by functions I call.
      */
     const void *vmaxsave = vmaxget();
+    if (!R_FINITE(gc->lwd) || gc->lwd <= 0) return;
     if (gc->lty == LTY_BLANK)
 	/* "transparent" border */
 	gc->col = R_TRANWHITE;
@@ -1194,6 +1197,7 @@ void GECircle(double x, double y, double radius, const pGEcontext gc, pGEDevDesc
     /* There is no point in trying to plot a circle of zero radius */
     if (radius <= 0.0) return;
 
+    if (!R_FINITE(gc->lwd) || gc->lwd <= 0) return;
     if (gc->lty == LTY_BLANK)
 	/* "transparent" border */
 	gc->col = R_TRANWHITE;
@@ -1315,6 +1319,7 @@ void GERect(double x0, double y0, double x1, double y1,
     double *xc, *yc;
     int result;
 
+    if (!R_FINITE(gc->lwd) || gc->lwd <= 0) return;
     if (gc->lty == LTY_BLANK)
 	/* "transparent" border */
 	gc->col = R_TRANWHITE;
@@ -1377,6 +1382,7 @@ void GEPath(double *x, double *y,
     }
     /* FIXME: what about clipping? (if the device can't) 
     */
+    if (!R_FINITE(gc->lwd) || gc->lwd <= 0) return;
     if (gc->lty == LTY_BLANK)
 	gc->col = R_TRANWHITE;
     if (npoly > 0) {
